feat: add get device by id and associated check
