# src/routes/deviceRoutes.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import { authenticateUser } from '../middleware/authenticateUser';
-import { registerDevice } from '../controllers/deviceController';
+import { getDevice, registerDevice } from '../controllers/deviceController';
 import { isGuest } from '../middleware/canUserRegisterDevice';
 import { checkUserHouseholdId } from '../middleware/checkUserHouseholdId';
 
@@ -8,5 +8,6 @@ const router = Router();
 
 router.use(authenticateUser);
 router.post('/', checkUserHouseholdId, isGuest, registerDevice);
+router.get('/:id', getDevice);
 
 export default router;
